# GENESIS

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  pyproject.toml  requirements.txt  setup.cfg
controller/: __init__.py  __main__.py  config.py  cycle.py  main.py
controller/agents/: axiom.py  base.py  flux.py
controller/inference/: backend.py  ollama_backend.py  vllm_backend.py
controller/logging/: logger.py  schemas.py
controller/phases/: discussion.py  doctrine_revision.py  ethical_log.py  evaluation.py  identity_revision.py  interpretation.py  load_state.py  memory_summarize.py  persist_state.py  protocol_design.py  reflection.py  retrieval.py  scenario_check.py  scenario_inject.py  schemas.py
controller/retrieval/: databases.py  index.py  logger.py
controller/scenarios/: library.py
controller/scenarios/events/: doctrine_crisis_01.yaml  external_critique_01.yaml  identity_challenge_01.yaml  legacy_pressure_01.yaml  resource_constraint_01.yaml  scope_expansion_01.yaml  (+2 more)
controller/world/: __init__.py  artifacts.py  reset.py  state.py
docs/: build_status.md  deployment_runbook.md  handoff_2026-04-05.md
prompts/: annotation_assistant.md  axiom_system.md  evaluator_system.md  flux_system.md  memory_summarizer.md  retrieval_summarizer.md
scripts/: analyze_run.py  annotate_run.py  build_kb.py  init_run.py
tests/: test_config.py  test_inference_backend.py  test_logging.py  test_retrieval.py  test_scenarios.py  test_schemas.py  test_world.py
world_template/doctrine/: constitution.md  doctrine.md  identity_axiom.md  identity_flux.md  manifesto.md
